# github-assistant

./: .env.example  .gitignore  .gitmodules  Makefile  README.md  launch.py  requirements.txt
server-poc/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  deploy.sh  pyproject.toml
server-poc/.relta/: chat_memory.sqlite-shm  chat_memory.sqlite-wal  relta_data.duckdb  relta_data.duckdb.wal  relta_internal.duckdb  relta_internal.duckdb.wal
server-poc/.relta/data/: github_issues.duckdb  github_issues.duckdb.wal  github_stargazers.duckdb
server-poc/.relta/semantic_layer/github_issues/: issue_creation.json
server-poc/.relta/semantic_layer/github_stargazers/: repository_stars.json
server-poc/.relta/semantic_layer/issues/: issue_creator.json  issue_overview.json  issue_resolution.json  last_issue_details.json  open_issues.json  total_issues.json
server-poc/data/: data.csv
server-poc/data_pipelines/: github_pipeline.py
server-poc/data_pipelines/.dlt/: .sources
server-poc/data_pipelines/github/: __init__.py  helpers.py  queries.py
server-poc/infra/: .gitignore
server-poc/infra/app/: main.tf  variable.tf
server-poc/infra/app/ecs/: main.tf  output.tf
server-poc/infra/app/network/: main.tf
server-poc/infra/app/rds/: main.tf  outputs.tf  variables.tf
server-poc/infra/setup/: main.tf  output.tf
server-poc/relta/: .gitignore  .pre-commit-config.yaml  .prettierignore  README.md  mkdocs.yml  pyproject.toml
server-poc/relta/.github/workflows/: mkdocs-check.yml  mkdocs-deploy.yml  pytest.yml  ruff.yml
server-poc/relta/docs/: .pages  CNAME  README.md  getting-started.md  index.md  reference.md
server-poc/relta/docs/assets/diagrams/: v0_client_arch.d2  v0_ideation.d2
server-poc/relta/docs/guide/: architecture.md  cli.md  configuration.md  datasource.md  semantic-layer.md
server-poc/relta/src/relta/: __init__.py  client.py  config.py  exceptions.py
server-poc/relta/src/relta/agents/: README.md  __init__.py  semantic_agent.py  sql_agent.py
server-poc/relta/src/relta/chat/: README.md  __init__.py  chat.py
server-poc/relta/src/relta/cli/: __init__.py  textual_cli.py  typer_cli.py
server-poc/relta/src/relta/datasource/: README.md  __init__.py  datasource.py
server-poc/relta/src/relta/semantic/: README.md  __init__.py  base.py  (+1 more)
server-poc/relta/tests/: .env.example  README.md  test_e2e.py
server-poc/semantic_layer/: commit_activity.json  commit_details.json  commits_by_author.json  commits_by_day.json  commits_by_week.json  commits_per_branch.json  commits_total.json  file_change_frequency.json  issue_metrics.json  issue_tracking.json  lock_file_updates.json  new_dependency_commit.json  open_pull_requests.json  pull_request_reactions.json  pull_request_status.json  repository_stars.json  stargazer_metrics.json
server-poc/server_poc/: data_loader.py  server.py
server-poc/server_poc/models/: __init__.py  githubrepoinfo.py  user_prompt.py
server-poc/server_poc/semantic_layer/: pr_metrics.json
server-poc/tests/: questions.csv  test_cases.json
(+42 files in other folders)
